crates/solidity/testing/snapshots/bindings_output/yul/try_catch_params/generated/0.5.3-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Parse errors:
Error: Expected AddressKeyword or AssemblyKeyword or BoolKeyword or BreakKeyword or ByteKeyword or BytesKeyword or CloseBrace or ContinueKeyword or DecimalLiteral or DoKeyword or DoubleQuotedHexStringLiteral or DoubleQuotedStringLiteral or EmitKeyword or FalseKeyword or FixedKeyword or ForKeyword or FunctionKeyword or HexLiteral or Identifier or IfKeyword or IntKeyword or MappingKeyword or NewKeyword or OpenBrace or OpenBracket or OpenParen or ReturnKeyword or SingleQuotedHexStringLiteral or SingleQuotedStringLiteral or StringKeyword or SuperKeyword or ThisKeyword or TrueKeyword or TypeKeyword or UfixedKeyword or UintKeyword or WhileKeyword.
    ╭─[input.sol:6:9]
    │
  6 │ ╭─▶         try service.test() returns (uint v) {
    ┆ ┆   
 19 │ ├─▶     }
    │ │           
    │ ╰─────────── Error occurred here.
────╯
References and definitions: 
    ╭─[input.sol:1:1]
    │
  4 │ contract Test {
    │          ──┬─  
    │            ╰─── name: 1
  5 │     function test(Service service) public returns (uint r) {
    │              ──┬─ ───┬─── ───┬───                       ┬  
    │                ╰─────────────────────────────────────────── name: 2
    │                      │       │                          │  
    │                      ╰───────────────────────────────────── ref: 5
    │                              │                          │  
    │                              ╰───────────────────────────── name: 3
    │                                                         │  
    │                                                         ╰── name: 4
    │ 
 22 │ interface Service {
    │           ───┬───  
    │              ╰───── name: 5
 23 │     function test() external returns (uint);
    │              ──┬─  
    │                ╰─── name: 6
────╯
Definiens: 
    ╭─[input.sol:1:1]
    │
  3 │ ╭─────▶ 
    ┆ ┆ ┆     
  5 │ │ ╭───▶     function test(Service service) public returns (uint r) {
    │ │ │                       ───────┬───────                  ───┬──  
    │ │ │                              ╰───────────────────────────────── definiens: 3
    │ │ │                                                           │    
    │ │ │                                                           ╰──── definiens: 4
    ┆ ┆ ┆     
 19 │ │ ├───▶     }
    │ │ │             
    │ │ ╰───────────── definiens: 2
 20 │ ├───│ ▶ }
    │ │   │       
    │ ╰─────────── definiens: 1
 21 │     ╭─▶ 
    ┆     ┆   
 23 │     │       function test() external returns (uint);
    │     │   ──────────────────────┬──────────────────────  
    │     │                         ╰──────────────────────── definiens: 6
 24 │     ├─▶ }
    │     │       
    │     ╰─────── definiens: 5
────╯
